--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                 <ul>
 
                     <a href="./index.html">Accueil</a>
-                    <a href="#">Tarifs</a>
+                    <a href="./tarifs.html">Tarifs</a>
                     <a href="./contact.html">Contact</a>
                 </ul>
             </li>
@@ -28,13 +28,6 @@
         <div>
             <h2 class="contact"> 1 Bis Chemin De La Rollande - Zone AGROPARC - 84140 AVIGNON </h2>
 
-            <section>
-                <a href="tel:0606060607" class="tel">
-                    <i class="fa fa-phone"></i>
-                </a>
-            </section>
-
-
             <section class="map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2874.326302046555!2d4.881561451497882!3d43.91121807901089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5ee0606386e69%3A0x38986ee0e2f75c26!2s1%20Chem.%20de%20la%20Rollande%2C%2084140%20Avignon!5e0!3m2!1sfr!2sfr!4v1655043795979!5m2!1sfr!2sfr"
@@ -42,3 +35,11 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         </section>
+
+        <section>
+            <a href="tel:0760158185" class="tel">
+                <i class="fa fa-phone"></i>
+            </a>
+        </section>
+
+</body>
