--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
 
                     <a href="./index.html">Accueil</a>
-                    <a href="#">Tarifs</a>
+                    <a href="./tarifs.html">Tarifs</a>
                     <a href="./contact.html">Contact</a>
                 </ul>
             </li>
