--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>le temps-d'aime</title>
+    <title>Le Temps-d'Aime - Massages & Réflexologie plantaire</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="icon" href="./img/shortcut icon.png">
 </head>
 
 <body>
@@ -24,22 +25,25 @@
         </nav>
         <h1>le temps-d'aime</h1>
         <h2>massages bien-être & réflexologie plantaire </h2>
+    </header>
 
-        <div>
-            <h2 class="contact"> 1 Bis Chemin De La Rollande - Zone AGROPARC - 84140 AVIGNON </h2>
+    <div>
+        <h2 class="contact"> 1 Bis Chemin De La Rollande - Zone AGROPARC - 84140 AVIGNON </h2>
 
-            <section class="map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2874.326302046555!2d4.881561451497882!3d43.91121807901089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5ee0606386e69%3A0x38986ee0e2f75c26!2s1%20Chem.%20de%20la%20Rollande%2C%2084140%20Avignon!5e0!3m2!1sfr!2sfr!4v1655043795979!5m2!1sfr!2sfr"
-                    width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        </section>
+        <section class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2874.326302046555!2d4.881561451497882!3d43.91121807901089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5ee0606386e69%3A0x38986ee0e2f75c26!2s1%20Chem.%20de%20la%20Rollande%2C%2084140%20Avignon!5e0!3m2!1sfr!2sfr!4v1655043795979!5m2!1sfr!2sfr"
+                width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    </section>
 
-        <section>
-            <a href="tel:0760158185" class="tel">
-                <i class="fa fa-phone"></i>
-            </a>
-        </section>
+    <section>
+        <a href="tel:0760158185" class="tel">
+            <i class="fa fa-phone"></i>
+        </a>
+    </section>
 
 </body>
+
+</html>
