--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>le temps-d'aime</title>
+    <title>Le Temps-d'Aime - Massages & Réflexologie plantaire</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="icon" href="./img/shortcut icon.png">
 </head>
 
 <body>
@@ -24,7 +25,6 @@
         </nav>
         <h1>le temps-d'aime</h1>
         <h2>massages bien-être & réflexologie plantaire </h2>
-
     </header>
 
     <section>
@@ -43,6 +43,7 @@
                 <i class="fa fa-facebook"></i>
             </a>
         </section>
+
 
     </footer>
 
