--- a/tarifs.html
+++ b/tarifs.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>le temps-d'aime</title>
+    <title>Le Temps-d'Aime - Massages & Réflexologie plantaire</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="icon" href="./img/shortcut icon.png">
 </head>
 
 <body>
@@ -17,10 +18,11 @@
                 <ul>
 
                     <a href="./index.html">Accueil</a>
-                    <a href="#">Tarifs</a>
+                    <a href="./tarifs.html">Tarifs</a>
                     <a href="./contact.html">Contact</a>
                 </ul>
             </li>
         </nav>
         <h1>le temps-d'aime</h1>
         <h2>massages bien-être & réflexologie plantaire </h2>
+    </header>
