--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,13 @@
         </a>
     </section>
 
+    <section>
+        <footer>
+            <p class="footer">LaCigaleDev© 2022 - Le T'emps d'Aime© 2022 - tous droits réservés</p>
+            <p class="footer2"> N° Siret 449 240 480 00037 - APE 8690F -</p>
+            <p class="footer2"> Réflexologie & Massages à but non thérapeuthiques.</p>
+        </footer>
+
 </body>
 
 </html>
