--- a/index.html
+++ b/index.html
@@ -37,15 +37,21 @@
 
     <p>"Les massages bien-être & la réflexologie plantaire apportent de nombreux bienfaits à l'organisme..."</p>
 
-    <footer>
-        <section>
-            <a href="https://fr-fr.facebook.com/letempsdaime" class="network">
-                <i class="fa fa-facebook"></i>
-            </a>
-        </section>
+    <section>
+        <a href="https://fr-fr.facebook.com/letempsdaime" class="network">
+            <i class="fa fa-facebook"></i>
+        </a>
+    </section>
+    <section>
+        <footer>
+            <p class="footer">LaCigaleDev© 2022 - Le T'emps d'Aime© 2022 - tous droits réservés</p>
+            <p class="footer2"> N° Siret 449 240 480 00037 - APE 8690F -</p>
+            <p class="footer2"> Réflexologie & Massages à but non thérapeuthiques.</p>
+        </footer>
+    </section>
 
 
-    </footer>
+
 
 
 </body>
