--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,106 @@
+<!--HTML-->
 <!DOCTYPE html>
 <html lang="fr">
 
+<!--HEAD-->
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META-->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--META-->
+
+    <!--TITLE-->
     <title>Le Temps-d'Aime - Massages & Réflexologie plantaire</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="icon" href="./img/shortcut icon.png">
+    <!--TITLE-->
+
+    <!--LINK-->
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+    <link rel="icon" href="./img/shortcut icon.png" />
+    <!--LINK-->
 </head>
+<!--HEAD-->
+
+<!--BODY-->
 
 <body>
+    <!--HEADER-->
     <header>
+        <!--NAVBAR-->
         <nav>
-            <li>
-                <ul>
-
+            <ul>
+                <li>
                     <a href="./index.html">Accueil</a>
                     <a href="./tarifs.html">Tarifs</a>
                     <a href="./contact.html">Contact</a>
-                </ul>
-            </li>
+                </li>
+            </ul>
         </nav>
+        <!--NAVBAR-->
+
         <h1>le temps-d'aime</h1>
-        <h2>massages bien-être & réflexologie plantaire </h2>
+        <h2>massages bien-être & réflexologie plantaire</h2>
     </header>
+    <!--HEADER-->
 
     <div>
-        <h2 class="contact"> 1 Bis Chemin De La Rollande - Zone AGROPARC - 84140 AVIGNON </h2>
+        <h2 class="contact">
+            1 Bis Chemin De La Rollande - Zone AGROPARC - 84140 AVIGNON
+        </h2>
 
-        <section class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2874.326302046555!2d4.881561451497882!3d43.91121807901089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5ee0606386e69%3A0x38986ee0e2f75c26!2s1%20Chem.%20de%20la%20Rollande%2C%2084140%20Avignon!5e0!3m2!1sfr!2sfr!4v1655043795979!5m2!1sfr!2sfr"
-                width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p class="rdv">" Uniquement sur Rendez-Vous "</p>
     </div>
-    </section>
 
+    <!--MAP-->
+    <section class="map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2874.326302046555!2d4.881561451497882!3d43.91121807901089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5ee0606386e69%3A0x38986ee0e2f75c26!2s1%20Chem.%20de%20la%20Rollande%2C%2084140%20Avignon!5e0!3m2!1sfr!2sfr!4v1655043795979!5m2!1sfr!2sfr"
+            width="1200" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <!--MAP-->
+
+    <!--PHONE-->
     <section>
         <a href="tel:0760158185" class="tel">
             <i class="fa fa-phone"></i>
         </a>
     </section>
+    <!--PHONE-->
 
+    <!--SCHEDULE-->
     <section>
-        <footer>
-            <p class="footer">LaCigaleDev© 2022 - Le T'emps d'Aime© 2022 - tous droits réservés</p>
-            <p class="footer2"> N° Siret 449 240 480 00037 - APE 8690F -</p>
-            <p class="footer2"> Réflexologie & Massages à but non thérapeuthiques.</p>
-        </footer>
+        <div class="heure">
+            <p class="pheure">Lundi, Mercredi, Jeudi</p>
+            <span class="sheure">8h30 - 19h00</span>
+            <p class="pheure">Mardi, Vendredi</p>
+            <span class="sheure">8h30 - 12h00</span>
+            <p class="pheure">Samedi</p>
+            <span class="sheure">8h30 - 14h00</span>
+        </div>
+    </section>
+    <!--SCHEDULE-->
+
+    <!--FOOTER-->
+    <section>
+        <div class="div_footer">
+            <footer>
+                <p class="footer">
+                    LaCigaleDev© 2022 - Le T'emps d'Aime© 2022 - tous droits réservés
+                </p>
+                <p class="footer2">N° Siret 449 240 480 00037 - APE 8690F -</p>
+                <p class="footer2">
+                    Réflexologie & Massages à but non thérapeuthiques.
+                </p>
+            </footer>
+        </div>
+    </section>
+    <!--FOOTER-->
 
 </body>
+<!--BODY-->
 
 </html>
+<!--HTML-->
