--- a/tarifs.html
+++ b/tarifs.html
@@ -1,28 +1,140 @@
+<!--HTML-->
 <!DOCTYPE html>
 <html lang="fr">
 
+<!--HEAD-->
+
 <head>
+    <!--META-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META-->
+
+    <!--TITLE-->
     <title>Le Temps-d'Aime - Massages & Réflexologie plantaire</title>
+    <!--TITLE-->
+
+    <!--LINK-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="icon" href="./img/shortcut icon.png">
+    <!--LINK-->
 </head>
+<!--HEAD-->
+
+<!--BODY-->
 
 <body>
+    <!--HEADER-->
     <header>
+        <!--NAVBAR-->
         <nav>
-            <li>
-                <ul>
-
+            <ul>
+                <li>
                     <a href="./index.html">Accueil</a>
                     <a href="./tarifs.html">Tarifs</a>
                     <a href="./contact.html">Contact</a>
-                </ul>
-            </li>
+                </li>
+            </ul>
         </nav>
+        <!--NAVBAR-->
+
         <h1>le temps-d'aime</h1>
         <h2>massages bien-être & réflexologie plantaire </h2>
     </header>
+    <!--HEADER-->
+
+    <!--ARTICLE-->
+    <section>
+        <article class="card">
+            <header>
+                <h2 class="h2card">Massage " Temps - D'aime "</h2>
+            </header>
+            <img src="./img/relax-g34973d594_1920.jpg" alt="Hot air balloons">
+            <div class="content">
+                <p class="pcard">Durée 1h30 - Prix 80 euros.</p>
+            </div>
+            <h3 class="h3card">" Pratique des 7 manoeuvres fondamentales associées à des points de shiatsu et de
+                réflexologie
+                plantaire "</h3>
+
+
+        </article>
+        </div>
+
+        <article class="card">
+            <header>
+                <h2 class="h2card">Massage " Tissus Profonds " </h2>
+            </header>
+            <img src="./img/relax-g34973d594_1920.jpg" alt="Hot air balloons">
+            <div class="content">
+                <p class="pcard">Durée 1h - Prix 55 euros.</p>
+            </div>
+            <h3 class="h3card">" Idéal pour relâcher les tensions, évacuer le stress tout en apportant tonus & bien
+                être "</h3>
+
+
+        </article>
+        </div>
+
+        <article class="card">
+            <header>
+                <h2 class="h2card">Massage " Relaxant "</h2>
+            </header>
+            <img src="./img/relax-g34973d594_1920.jpg" alt="Hot air balloons">
+            <div class="content">
+                <p class="pcard">Durée 1h - Prix 55 euros.</p>
+            </div>
+            <h3 class="h3card">" Pressions superficielles et moyennes qui procurent bien-être et lâcher prise "</h3>
+
+
+        </article>
+        </div>
+
+        <article class="card">
+            <header>
+                <h2 class="h2card">Réflexologie Plantaire</h2>
+            </header>
+            <img src="./img/relax-g34973d594_1920.jpg" alt="Hot air balloons">
+            <div class="content">
+                <p class="pcard">Durée 45min - Prix 45 euros.</p>
+            </div>
+            <h3 class="h3card">" Technique très efficace qui agit sur la totalité de l'organisme grâce à des pressions
+                sur des zones
+                réflexes des pieds "</h3>
+
+        </article>
+
+        <article class="card">
+            <header>
+                <h2 class="h2card">Réflexologie Métamorphose</h2>
+            </header>
+            <img src="./img/relax-g34973d594_1920.jpg" alt="Hot air balloons">
+            <div class="content">
+                <p class="pcard">Durée 1h - Prix 55 euros.</p>
+            </div>
+            <h3 class="h3card">" C'est une stimulation très douce, profondément relaxante de zones très précises sur les
+                pieds, les mains et la tête "</h3>
+
+        </article>
+        </div>
+    </section>
+    <!--ARTICLE-->
+
+    <!--FOOTER-->
+    <section>
+        <div class="div_footer">
+            <footer>
+                <p class="footer">LaCigaleDev© 2022 - Le T'emps d'Aime© 2022 - tous droits réservés</p>
+                <p class="footer2"> N° Siret 449 240 480 00037 - APE 8690F -</p>
+                <p class="footer2"> Réflexologie & Massages à but non thérapeuthiques.</p>
+            </footer>
+        </div>
+    </section>
+    <!--FOOTER-->
+</body>
+<!--BODY-->
+
+</html>
+<!--HTML-->
