--- a/index.html
+++ b/index.html
@@ -1,59 +1,90 @@
+<!--HTML-->
 <!DOCTYPE html>
 <html lang="fr">
 
+<!--HEAD-->
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META-->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--META-->
+
+    <!--TITLE-->
     <title>Le Temps-d'Aime - Massages & Réflexologie plantaire</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="icon" href="./img/shortcut icon.png">
+    <!--TITLE-->
+
+    <!--LINK-->
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+    <link rel="icon" href="./img/shortcut icon.png" />
+    <!--LINK-->
 </head>
+<!--HEAD-->
+
+<!--BODY-->
 
 <body>
+    <!--HEADER-->
     <header>
+        <!--NAVBAR-->
         <nav>
-            <li>
-                <ul>
-
+            <ul>
+                <li>
                     <a href="./index.html">Accueil</a>
                     <a href="./tarifs.html">Tarifs</a>
                     <a href="./contact.html">Contact</a>
-                </ul>
-            </li>
+                </li>
+            </ul>
         </nav>
-        <h1>le temps-d'aime</h1>
-        <h2>massages bien-être & réflexologie plantaire </h2>
-    </header>
+        <!--NAVBAR-->
 
+        <h1>le temps-d'aime</h1>
+        <h2>massages bien-être & réflexologie plantaire</h2>
+    </header>
+    <!--HEADER-->
+
+    <!--IMG-->
     <section>
         <div>
-            <a href=""><img src="./img/massage-gd25466967_1920.jpg" alt=""></a>
-            <a href=""><img src="./img/relax-g34973d594_1920.jpg" alt=""></a>
-            <a href=""><img src="./img/foot-massage-g55b64bf68_1920.jpg" alt=""></a>
+            <a href=""><img src="./img/massage-gd25466967_1920.jpg" alt="" /></a>
+            <a href=""><img src="./img/relax-g34973d594_1920.jpg" alt="" /></a>
+            <a href=""><img src="./img/foot-massage-g55b64bf68_1920.jpg" alt="" /></a>
         </div>
     </section>
+    <!--IMG-->
 
-    <p>"Les massages bien-être & la réflexologie plantaire apportent de nombreux bienfaits à l'organisme..."</p>
+    <p>
+        "Les massages bien-être & la réflexologie plantaire apportent de nombreux
+        bienfaits à l'organisme..."
+    </p>
 
+    <!--FACEBOOK-->
     <section>
         <a href="https://fr-fr.facebook.com/letempsdaime" class="network">
             <i class="fa fa-facebook"></i>
         </a>
     </section>
+    <!--FACEBOOK-->
+
+    <!--FOOTER-->
     <section>
-        <footer>
-            <p class="footer">LaCigaleDev© 2022 - Le T'emps d'Aime© 2022 - tous droits réservés</p>
-            <p class="footer2"> N° Siret 449 240 480 00037 - APE 8690F -</p>
-            <p class="footer2"> Réflexologie & Massages à but non thérapeuthiques.</p>
-        </footer>
+        <div class="div_footer">
+            <footer>
+                <p class="footer">
+                    LaCigaleDev© 2022 - Le T'emps d'Aime© 2022 - tous droits réservés
+                </p>
+                <p class="footer2">N° Siret 449 240 480 00037 - APE 8690F -</p>
+                <p class="footer2">
+                    Réflexologie & Massages à but non thérapeuthiques.
+                </p>
+            </footer>
+        </div>
     </section>
-
-
-
-
-
+    <!--FOOTER-->
 </body>
+<!--BODY-->
 
 </html>
+<!--HTML-->
